--- a/features/newsList/src/main/res/values/strings.xml
+++ b/features/newsList/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="title">News</string>
+    <string name="news">News</string>
+
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
